import 'package:brongnal_app/common/core.dart';
import 'package:brongnal_app/common/config.dart';
import 'package:flutter/material.dart';
import 'package:shared_preferences/shared_preferences.dart';

class Register extends StatelessWidget {
  const Register({super.key, required this.onRegister, required this.core});
  final void Function(String username) onRegister;
  final BrongnalCore core;

  @override
  Widget build(BuildContext context) {
    final theme = Theme.of(context);
...
        child: Center(
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              Padding(
                padding: const EdgeInsets.all(20.0),
                child: Text('Connect with Brongnal',
                    style: theme.textTheme.displayLarge),
              ),
              Padding(
                padding: const EdgeInsets.all(40.0),
                child: SizedBox(
                  width: 550,
...
