...
    TextEditingController usernameInput = TextEditingController();
    return Scaffold(
      appBar: AppBar(
        title: Row(
          children: [
            Text(
              "New message",
              overflow: TextOverflow.fade,
              style: theme.titleTextStyle!.copyWith(
                fontSize: 30,
                color: Colors.white,
              ),
            ),
...
